--- a/F24BA085-佐藤琢磨.md
+++ b/F24BA085-佐藤琢磨.md
@@ -1,8 +1,8 @@
-# Flutterについて本講座で学んだことを、markdown形式でまとめて、一つのリポジトリにあつめて、リンクを提出しなさい。なお、不定期でチェックするので、こまめに更新しておくこと。
-- リポジトリ名　➡　FLUTTER_STUDY_SUMMARY
----
 
-# 以下からは、マークダウンのあんちょこですよ(*'▽')
+---
+2025年4月16日
+### 今日のキーワード：　「キュウリ」は紀元前2000年以上前から栽培されていたと言われており、古代エジプトやメソポタミア文明の頃には食べられていました。ツタンカーメン王の墓からもキュウリの種が見つかったそうです。また、キュウリの先端に時々感じる苦味は「ククルビタシン」という化合物によるものです。この成分は自然界では害虫避けの役割を果たしているとされています。
+---
 
 # 見出し1
 ## 見出し2
@@ -64,64 +64,3 @@ _______________________________________________
 |ゲーム開発1 |ゲームの開発を一連の流れで体験する |3 |
 |ゲーム開発2 |ゲームの表現技術を学ぶ |3 |
 |モバイル開発×2 |モバイル開発を学ぶ |1(×2日)|
-
-
-
-
-# こんにちは！
----
-## やぁ～。(;´･ω･)
-___
-今日は、GW明けの４コマ目の授業だよ。
-
-~~あと少しで授業終了~~
-***
-> 夏目漱石の小言
-
-
-``` dart //半角スペースにプログラミング言語を入れると色が変わる
-int main()
-{
-    // hogehoge
-    return 0;
-}
-```
-
-C言語で文字出力は、`printf`を使います
-
-// リストの作成
-
-- 箇条書き
-  - 箇条書き
-    - 箇条書き
-
-1. 番号付きだよ。
-1. 番号付きだよ。
-1. 番号付きだよ。
-1. 番号付きだよ。
-
-- カレーライス
-  1. ジャガイモ
-  1. ニンジン
-  1. ぶたにく
-
-// リンクだよ!  
-[google](https://www.google.co.jp/)
-
-今日は、**春一番**の気候で*からっ風*が強い！
-
-// 画像だよ!  
-![alt](画像のURL)
-
-//テーブル表だよ
-
-| TH1 | TH2 |
-|---- |---- |
-| TD1 | TD3 |
-| TD2 | TD4 |
-
-
-| 左揃え | 中央揃え | 右揃え |
-|:---    |:---:    |---:   |
-|1       |2        |3      |
-|4       |5        |6      |
